logs/2_makefile.log
[ 11%] Building CXX object unit_tests/lib/googletest/CMakeFiles/gtest.dir/src/gtest-all.cc.o
[ 22%] Linking CXX static library ../../../lib/libgtest.a
[ 22%] Built target gtest
[ 33%] Building CXX object unit_tests/lib/googletest/CMakeFiles/gtest_main.dir/src/gtest_main.cc.o
[ 44%] Linking CXX static library ../../../lib/libgtest_main.a
[ 44%] Built target gtest_main
[ 55%] Building CXX object unit_tests/CMakeFiles/unit_tests.dir/__/object.cpp.o
[ 66%] Building CXX object unit_tests/CMakeFiles/unit_tests.dir/objectUniqueListTest.cpp.o
[ 77%] Building CXX object unit_tests/CMakeFiles/unit_tests.dir/__/objectlist.cpp.o
[ 88%] Building CXX object unit_tests/CMakeFiles/unit_tests.dir/__/stringObject.cpp.o
In file included from /tmp/tmpk4x699l0/student/objectlist.cpp:4:
/tmp/tmpk4x699l0/student/objectlist.h: In member function ‘ObjectList::iterator& ObjectList::iterator::operator++(int)’:
/tmp/tmpk4x699l0/student/objectlist.h:60:20: error: cannot bind non-const lvalue reference of type ‘ObjectList::iterator&’ to an rvalue of type ‘ObjectList::iterator’
   60 |             return tmp;
      |                    ^~~
make[3]: *** [unit_tests/CMakeFiles/unit_tests.dir/build.make:104: unit_tests/CMakeFiles/unit_tests.dir/__/objectlist.cpp.o] Error 1
make[3]: *** Waiting for unfinished jobs....
In file included from /tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp:8:
/tmp/tmpk4x699l0/student/unit_tests/../objectlist.h: In member function ‘ObjectList::iterator& ObjectList::iterator::operator++(int)’:
/tmp/tmpk4x699l0/student/unit_tests/../objectlist.h:60:20: error: cannot bind non-const lvalue reference of type ‘ObjectList::iterator&’ to an rvalue of type ‘ObjectList::iterator’
   60 |             return tmp;
      |                    ^~~
/tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp: In member function ‘virtual void ObjectListTester_moveConstructorImplemented_expectedAllElementsMovedToOrderContainer_Test::TestBody()’:
/tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp:364:22: warning: unused variable ‘objects2Add’ [-Wunused-variable]
  364 |     constexpr size_t objects2Add = 10;
      |                      ^~~~~~~~~~~
/tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp: In member function ‘virtual void ObjectListTester_assignmentOperatorCopying_expectedNewValues_Test::TestBody()’:
/tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp:395:22: warning: unused variable ‘objects2Add1’ [-Wunused-variable]
  395 |     constexpr size_t objects2Add1 = 10, objects2Add2 = 3;
      |                      ^~~~~~~~~~~~
/tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp:395:41: warning: unused variable ‘objects2Add2’ [-Wunused-variable]
  395 |     constexpr size_t objects2Add1 = 10, objects2Add2 = 3;
      |                                         ^~~~~~~~~~~~
/tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp: In member function ‘virtual void ObjectListTester_assignmentOperatorMoving_expectedAllElementsMoved_Test::TestBody()’:
/tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp:468:22: warning: unused variable ‘objects2Add1’ [-Wunused-variable]
  468 |     constexpr size_t objects2Add1 = 10, objects2Add2 = 3;
      |                      ^~~~~~~~~~~~
/tmp/tmpk4x699l0/student/unit_tests/objectUniqueListTest.cpp:468:41: warning: unused variable ‘objects2Add2’ [-Wunused-variable]
  468 |     constexpr size_t objects2Add1 = 10, objects2Add2 = 3;
      |                                         ^~~~~~~~~~~~
make[3]: *** [unit_tests/CMakeFiles/unit_tests.dir/build.make:76: unit_tests/CMakeFiles/unit_tests.dir/objectUniqueListTest.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:473: unit_tests/CMakeFiles/unit_tests.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:480: unit_tests/CMakeFiles/unit_tests.dir/rule] Error 2
make: *** [Makefile:312: unit_tests] Error 2
